tests/diagnostics/missing_paren.kal
# The opening parenthesis is never closed.
(1 + 2;
